--- a/include/appendix_Calibration.tex
+++ b/include/appendix_Calibration.tex
@@ -70,22 +70,42 @@
 
 \section{Application of the calibration to the test-beam data}\label{sec:appendixCalibDataG4}
 
+
 \begin{figure}[htbp] \centering
   \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0019_C07.pdf}
+    \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0019_G07.pdf}
     \caption{}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0019_C07.pdf}
+    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0019_G07.pdf}
     \caption{}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0019_C07.pdf}
+    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0019_G07.pdf}
     \caption{}
   \end{subfigure}
   \caption{Energy deposition and comparison to
-    \textsc{Geant4}. W0019\_C07, Run 902, THL=1148.}
-  \label{fig:EdepW19C7}
+    \textsc{Geant4}. W0019\_G07, Run 1190, THL=995.}
+  \label{fig:EdepW19L8}
+\end{figure}
+
+
+\begin{figure}[htbp] \centering
+  \begin{subfigure}[b]{0.32\textwidth}
+    \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0019_F07.pdf}
+    \caption{}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.32\textwidth}
+    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0019_F07.pdf}
+    \caption{}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.32\textwidth}
+%    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0019_L08.pdf}
+    \caption{}
+  \end{subfigure}
+  \caption{Energy deposition and comparison to
+    \textsc{Geant4}. W0019\_L08, Run 1130, THL=1133.}
+  \label{fig:EdepW19L8}
 \end{figure}
 
 
@@ -110,20 +130,20 @@
 
 \begin{figure}[htbp] \centering
   \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0019_G07.pdf}
+    \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0019_C07.pdf}
     \caption{}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0019_G07.pdf}
+    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0019_C07.pdf}
     \caption{}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0019_G07.pdf}
+    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0019_C07.pdf}
     \caption{}
   \end{subfigure}
   \caption{Energy deposition and comparison to
-    \textsc{Geant4}. W0019\_G07, Run 1190, THL=995.}
-  \label{fig:EdepW19L8}
+    \textsc{Geant4}. W0019\_C07, Run 902, THL=1148.}
+  \label{fig:EdepW19C7}
 \end{figure}
 
 
