--- a/include/ActiveEdgeSensors.tex
+++ b/include/ActiveEdgeSensors.tex
@@ -3,7 +3,6 @@
 \label{ch:ActiveEdgeSensors}
 % ==============================================================================    
 
-
 Active-edge technology allows for seamless tiling of pixel sensors of
 a vertex detector by depleting the sensors up to their physical
 edges. This allows for high coverage without creating overlaps between
@@ -682,7 +681,7 @@ the track position given by the Timepix3 telescope (with a resolution
 of $\sim2\,\micron$). The charge deposited is obtained by applying the
 test-pulse calibrations to the data. For each track position, the
 deposited charge is projected as a one-dimensional histogram and
-fitted with a Landau function convoluted to a Gaussian. The most
+fitted with a Landau function convoluted with a Gaussian. The most
 probable value (MPV) of the Landau fit is then compared to the
 collected charge obtained in the TCAD simulations. In the TCAD
 simulations, a fixed amount of charge is deposited and, unlike the
