--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -9,9 +9,9 @@ resolution due to the large number of carriers that are created by a
 given incident radiation, their compact sizes, fast timing and the
 effective thickness can be adapted to the requirements of the
 applications. Though, they show some limitations for smaller sizes and
-their performance can degrade from ration induced damages. Silicon
+their performance can degrade from radiation induced damages. Silicon
 detectors are predominant for charge particle spectroscopy among
-semiconductor materials. 
+semiconductor materials.
 
 In this chapter, we will review the basic properties of semiconductor
 material, charge generation in silicon and the transport of charge
