--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -19,7 +19,7 @@ carriers through drift and diffusion. Pixel detectors are studied
 through pn-junctions. 
 
 %% --------------------------------------------- %%
-\section{Basic properties}
+\section{Basic properties of semiconductor material}
 Due to the periodic lattice of crystalline structure of semiconductor
 material, electrons within the solid have allowed energy bands. The
 energy of the electrons is confined to one of the energy bands and the
@@ -33,22 +33,21 @@ conductivity. The \textit{bandgap} (E\textsubscript{g}) separates the
 valence from the conduction band and allows to classify wether the
 material is a semiconductor, an insulator or a metal. In the absence
 of thermal excitation, the valence band for the semiconductors and
-insulators is completely full and the conduction band empty and
-therefore they are not electrically conductive. Metals are highly
-electrically conductive since the fermi energy level
-(E\textsubscript{F}) lies in the conduction band and the electrons are
-free to migrate through the material even at very low
-temperatures. However, for insulators and semiconductors the electrons
-must cross the bandgap to become conductive. The bandgap for
-semiconductors ($\sim1\,\ev$) is much lower than for insulators
-($\sim5\,\ev$). If an electron in the valence band gains enough
-thermal energy to cross the bandgap and reach the conduction band, it
-leaves behind a vacancy (a hole) behind in the valence band. The
-electron-hole pair can move under the influence of an external
-electric field (electrons in the opposite direction of the
-holes). This motion creates conductivity in the material. This
-property is exploited in silicon detectors to detect radiation and is
-developed more in the coming sections.
+insulators is completely full and the conduction band empty. Therefore
+they are not electrically conductive. Metals are highly electrically
+conductive since the fermi energy level (E\textsubscript{F}) lies in
+the conduction band and the electrons are free to migrate through the
+material even at very low temperatures. However, for insulators and
+semiconductors the electrons must cross the bandgap to become
+conductive. The bandgap for semiconductors ($\sim1\,\ev$) is much
+lower than for insulators ($\sim5\,\ev$). If an electron in the
+valence band gains enough thermal energy to cross the bandgap and
+reach the conduction band, it leaves behind a vacancy (a hole) behind
+in the valence band. The electron-hole pair can move under the
+influence of an external electric field (electrons in the opposite
+direction of the holes). This motion creates conductivity in the
+material. This property is exploited in silicon detectors to detect
+radiation and is developed more in the coming sections.
 
 
 
