Small intermediate commit

--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -95,11 +95,11 @@ interaction of charged particles with silicon and can be
 detected. Part of the absorbed energy generates electron-hole pairs
 through scattering processes with the shell electrons of silicon and
 can be collected by the readout electronics. The number of
-electron-hole pairs produced in the detector as well as the total
-energy loss of the particle in the detector are stochastic quantities.
+electron-hole pairs produced as well as the total energy loss of the
+particle in the detector are stochastic quantities.
 
 The energy loss along the particle track is described by the
-Bethe-Bloch formula~\cite{Beringer:1900zz}.
+Bethe-Bloch formula~\cite{Beringer:1900zz}:
 
 \begin{equation}
   - \braket{{dE}\over{dx}} = 4 \pi N_A r_{e}^2 m_e c^2 z^2 \frac{Z}{A}  \frac{1}{\beta^2} \left[ \frac{1}{2} \ln{\frac{2 m_e c^2 \beta^2 \gamma^2 T_{max}}{I^2}} - \beta^2 - \frac{\delta\left(\beta\gamma\right)}{2}\right]\; ,
@@ -113,9 +113,9 @@ the absorption medium, $\beta={v \over c}$,
 $\gamma=1/\sqrt{1-\beta^2}$, $I$ the mean excitation energy, $T_{max}$
 the maximum kinetic energy that a particle can transfer to a shell
 electron and $\delta\left(\beta\gamma\right)$ the density effect
-correction to ionisation energy loss. A minimum ionising particle
-(MIP) has an energy loss near the minimum of the Bethe-Bloch
-formula. Relativistic particles are considered as MIPs.
+correction to ionisation energy loss. Relativistic particles with an
+energy loss near the minimum of the Bethe-Bloch formula are considered
+as minimum ionising particles (MIPs).
 
 \subsection{Energy-loss spectrum in silicon}
 Ionisation is also subject to statistical fluctuations and
