--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -453,47 +453,137 @@ likely to be trapped in an irradiated material.
 %% --------------------------------------------- %%
 %\section{Pixel detectors: pn-junction}
 
-Silicon sensors are made of reversely biased pn-junctions. The
-electric field due to the bias voltage allows the charge carriers to
-drift towards the readout chip and also to suppress the leakage
-current.
+% Silicon sensors are made of reversely biased pn-junctions. The
+% electric field due to the bias voltage allows the charge carriers to
+% drift towards the readout chip and also to suppress the leakage
+% current.
 
 \subsection{pn-junction in thermal equilibrium}
 
+By joining a p-type with an n-type material, a pn-junction is
+obtained. The p and n-type regions are electrically neutral. Due to
+thermal diffusion, the holes and the electrons are driven across the
+junction. This implies that electrons move from the n-type material to
+the p-regions leaving a positive net charge in n-regions. The same
+applies to the p-type region which is negatively charged. A potential
+is built up when the electrons diffuse to the p-region. This potential
+limits the diffusion depth when it exceeds the available energy for
+thermal diffusion and is called the built-in potential $V_{bi}$
+between the p and n-regions. The built-in potential depends
+logarithmically on the doping levels~\cite{Spieler2005}:
+
+\begin{equation}
+  V_{bi}= {{kT}\over e} \text{log}\left({N_a N_d} \over {n_i^2} \right)\; ,
+  \label{eq:Built_in_potential}
+\end{equation}
+
+where $N_a$ and $N_d$ are the acceptor and donor concentrations and
+$n_i$ is the intrinsic silicon carrier concentration. For a typical
+detector diode $V_{bi}\approx0.5$~V.
+
+The diffusion of the holes and electrons across the junction to the
+oppositely-doped regions, leads to a region free of mobile carriers
+called the depletion region. As seen previously, $V_{bi}$ limits the
+diffusion depth and therefore the width of the depletion region.
+
+Applying an external potential breaks down the thermal equilibrium. By
+applying a reverse bias potential, i.e. negative potential to the
+p-region and positive potential to the n-region, the potential barrier
+and the depletion width are increased.
+
+Under a forward bias on the pn-junction, the diode current increases
+rapidly with the voltage. But a reverse bias causes a quick
+saturation of the current flow within the junction and the pn-diode
+can be used as a rectifier. This property is used for the detection of
+radiation in silicon detectors as described in the next section.
+
+\subsection{reverse-biased pn-junction}
+
+The reverse-biased pn-junction is crucial in detection of radiation in
+silicon detectors as it increases the depletion width. This forms a
+capacitor empty of charge carriers where the undepleted p and
+n-regions are the electrodes and the depletion region is the
+dielectric. The electric field in the depletion region the mobile
+carriers to the electrodes.  The electric field due to the bias
+voltage allows the charge carriers to drift towards the readout chip
+and also to suppress the leakage current which can be an important
+source of noise.
+
+Here, we derive the depletion width, the electric field distribution,
+the drift and the diffusion within a pn-junction reverse-biased at a
+voltage of $V_B$.
+
 The potential $\varphi$ at each point is described by Poisson's
-equation~\cref{eq:poisson} \cite{Knoll2010}
+equation~\cite{Knoll2010}:
+
 \begin{equation}
   \nabla^{2}  \varphi=-{\rho \over \epsilon}\; ,
   \label{eq:poisson}
 \end{equation}
 
 where $\epsilon$ is the dielectric constant of the medium and $\rho$
-the net charge density.  The electric field E due to the electric
-potential is obtained by \cref{eq:Efield}
+the net charge density. The electric field E due to the electric
+potential is obtained by:
 
 \begin{equation}
-E=-grad \varphi \; ,
+E=-\text{grad }\varphi \; .
 \label{eq:Efield}
 \end{equation}
 
-In one dimension, \cref{eq:poisson} becomes
-\begin{equation}
-{{d^{2}  \varphi(z)} \over {dz^{2}}}=-{\rho(z) \over \epsilon}\; ,
-\label{eq:poisson1D}
-\end{equation}
 
-To simplify, we assume an abrupt junction where the charge densities on the p and n sides are:
+To simplify, we assume an abrupt junction where the charge densities
+on the p and n-regions illustrated in \cref{fig:chargeDensity} and
+given by:
 \begin{equation}
   \rho(z)= 
   \begin{cases} 
-    eN_{D}, & \mbox{if } 0\leq z < z_{n}\\ 
-    -eN_{A}, & \mbox{if } z_{p}\leq z < 0 
+    eN_{d}, & \mbox{if } 0\leq z < z_{n}\\ 
+    -eN_{a}, & \mbox{if } z_{p}\leq z < 0 
   \end{cases} 
-  \; ,
+  \; .
 \label{eq:chargeDensity}
 \end{equation}
 
-First, considering the n-side, the first and second integrations of the Poisson equation give,
+\begin{figure}[htbp]
+  \centering
+  \begin{tikzpicture}[node distance = 2.5cm, auto]
+    \begin{scope}[x={(image.south east)},y={(image.north west)}]
+
+      \draw[black, thick, ->] (0.5, 0.1) -- (0.5, 0.9); 
+      \node[above, color=black] at (0.5, 0.9) {$\rho$};
+      \draw[black, thick, ->] (0.1, 0.5) -- (0.9, 0.5);
+      \node[right, color=black] at (0.9, 0.5) {Depth (z)};
+      \node[left, color=black] at (0.5, 0.6) {e$N_d$};
+      \node[below, color=black] at (0.8, 0.5) {$z_n$};
+
+      \node[above, color=black] at (0.3, 0.5) {$z_p$};
+      \node[right, color=black] at (0.5, 0.2) {-e$N_a$};
+      
+      \draw[black, thick, dashed] (0.5, 0.6) -- (0.8, 0.6); 
+      \draw[black, thick, dashed] (0.8, 0.6) -- (0.8, 0.5);
+ 
+      \draw[black, thick, dashed] (0.3, 0.5) -- (0.3, 0.2);
+      \draw[black, thick, dashed] (0.5, 0.2) -- (0.3, 0.2);
+
+      % \draw[help lines,xstep=.1,ystep=.1] (0, 0) grid (1,1);
+      % \foreach \x in {0,1,...,9} { \node [anchor=north] at (\x/10,0) {0.\x}; }
+      % \foreach \y in {0,1,...,9} { \node [anchor=east] at (0,\y/10) {0.\y}; }
+
+    \end{scope}
+  \end{tikzpicture}
+  \caption{Charge density distribution for a simplified pn-junction.}
+  \label{fig:chargeDensity}
+\end{figure}
+
+
+
+In one dimension, Poisson's equation is simplified to:
+\begin{equation}
+{{d^{2}  \varphi(z)} \over {dz^{2}}}=-{\rho(z) \over \epsilon}\; .
+\label{eq:poisson1D}
+\end{equation}
+
+First, considering the n-side, the first and second integrations of the Poisson equation give:
 \begin{equation}
     {{d\phi(z)} \over {dz}}=-{{eN_{d}} \over \epsilon} (z-z_{n}) 
     \; ,
@@ -506,36 +596,38 @@ First, considering the n-side, the first and second integrations of the Poisson 
   \label{eq:PoissonIntegration2}
 \end{equation}
 
-Where $V_j$ is the potential at the interface where the n- and the p-sides join. At the boundary of the depletion region $z=z_{n}$:
+where $V_j$ is the potential at the interface where the n- and the p-sides join. At the boundary of the depletion region $z=z_{n}$:
 
 \begin{equation}
-  \phi(z_{n})=V_{b}={{eN_{d}z_{n}^{2}} \over \epsilon}+V_j 
+  \phi(z_{n})=V_{B}={{eN_{d}z_{n}^{2}} \over \epsilon}+V_j 
   \; ,
   \label{eq:BounderyPotential}
 \end{equation}
 
-In the p-region,
+where $V_B$ is the reverse bias voltage. In the p-region,
+
 \begin{equation}
-  V_j={{eN_ax_p^2} \over {2\epsilon}}
+  V_j={{eN_az_p^2} \over {2\epsilon}}
+  \; .
+\end{equation}
+
+The total potential is given by:
+
+\begin{equation}
+V_b={{e} \over {2 \epsilon}}(N_dz_n^2+N_az_p^2)
+  \; .
+\end{equation}
+
+Since the overall charge neutrality is maintained,
+\begin{equation}
+N_d z_n=N_a z_p
   \; ,
 \end{equation}
 
-And the total potential,
-\begin{equation}
-V_b={{e} \over {2 \epsilon}}(N_dx_n^2+N_ax_p^2)
-  \; ,
-\end{equation}
-
-The overall charge neutrality is maintained,
-\begin{equation}
-N_d x_n=N_a x_p
-  \; ,
-\end{equation},
-
-the reverse bias potential can be expressed as
+the reverse bias potential can be expressed as:
 
 \begin{equation}
-V_b={e \over {2\epsilon}}\left(1+{N_a \over N_d}\right) N_a x_p^2={e \over {2\epsilon}}\left(1+{N_d \over N_a}\right) N_d x_n^2
+V_b={e \over {2\epsilon}}\left(1+{N_a \over N_d}\right) N_a z_p^2={e \over {2\epsilon}}\left(1+{N_d \over N_a}\right) N_d z_n^2
   \; .
 \end{equation}
 
@@ -543,60 +635,60 @@ The depletion widths on the n- and p-sides of the junction are
 
 \begin{equation}
   \begin{multlined}
-x_n=\sqrt{{2 \epsilon V_b} \over {eN_d(1+N_d/N_a)}} \\
-x_p=\sqrt{{2 \epsilon V_b} \over {eN_a(1+N_a/N_d)}} 
-\; ,
+z_n=\sqrt{{2 \epsilon V_b} \over {eN_d(1+N_d/N_a)}} \\
+z_p=\sqrt{{2 \epsilon V_b} \over {eN_a(1+N_a/N_d)}} 
+\; .
 \end{multlined}
 \end{equation}
 
 The total depletion width is 
 
 \begin{equation}
-W=x_n+x_p=\sqrt{{2 \epsilon V_b \left(N_a+N_d\right)} \over {eN_aN_d} }
-\; ,
+W=z_n+z_p=\sqrt{{2 \epsilon V_b \left(N_a+N_d\right)} \over {eN_aN_d} }
+\; .
 \end{equation}
 
-The junction potential and also for an asymmetrical junction with $N_d \ll N_a$ for which the junction potential is equal to the potential of the p-contact.
+Considering an asymmetrical junction with $N_d \ll N_a$ for which the
+junction potential is equal to the potential of the p-contact:
 
 \begin{equation}
 V_j=\left(N_d \over N_a\right) {V_b \over \left(  1+N_d/N_a \right)} \stackrel{N_d \ll N_a}{\approx} {N_d \over N_a}V_b
-\; ,
+\; .
 \end{equation}
 
 
-For a pixel detector with asymmetric junction with a highly doped surface $N_c$ concentration and a lightly doped bulk $N_b$ ($N_b \ll N_c$), the doping concentration is expressed in terms of resistivity 
+For a pixel detector with asymmetric junction with a highly doped
+surface $N_c$ concentration and a lightly doped bulk $N_b$
+($N_b \ll N_c$), the doping concentration is expressed in terms of the
+bulk resistivity,
 \begin{equation}
 \rho_b = {1 \over {e\mu_{b}N_{b}}}
 \; ,
 \end{equation}
-where $\mu_b$ and $N_b$ are the mobility and the doping concentration of the bulk. The depletion width $W$ becomes,
+where $\mu_b$ and $N_b$ are the mobility and the doping concentration
+of the bulk. The depletion width $W$ becomes,
 \begin{equation}
 W=\sqrt{2 \epsilon \mu_b \rho_bV_b}
-\; ,
+\; .
 \label{eq:depletionWidth}
 \end{equation}
 
-In the absence of an externally applied voltage to a pn-junction, the
-thermal diffusion of the electrons and the holes from their original
-atoms results in a depletion width with a potential difference between
-the p- and n-sides called the built-in potential $V_{bi}$ which is
-about 0.5~V for detector diodes. \\
+By taking into account the built-in reverse bias voltage,
+\cref{eq:depletionWidth} is written as,
 
-\subsection{Reverse bias}
-By taking into account the built-in reverse bias voltage, \cref{eq:depletionWidth} is written as,
 \begin{equation}
 W=\sqrt{2 \epsilon \mu_b \rho_b \left(V_b+V_{bi}\right)}=\sqrt{{2 \epsilon \left(V_b+V_{bi}\right)} \over {eN_b}}
-\; ,
+\; .
 \label{eq:depletionWidth2}
 \end{equation}
 
 The electric field of \cref{eq:PoissonIntegration1}, by replacing the depletion width and $N_d$ by \cref{eq:depletionWidth2} can be expressed as
 \begin{equation}
 E(z)={{2\left(V_b+V_{bi}\right)} \over {W}} \left({z \over W}-1\right)
-\; ,
+\; .
 \end{equation}
 
-The depletion voltage ($W=d$) can be expressed as,
+The depletion voltage (for $W=d$) can be expressed as,
 \begin{equation}
 V_D={{eN_bd^2} \over {2 \epsilon}}-V_{bi}
 \; ,
@@ -604,52 +696,58 @@ V_D={{eN_bd^2} \over {2 \epsilon}}-V_{bi}
 \end{equation}
 where $d$ is the detector thickness. \\
 
-The electric field drops linearly from its maximum value at the junction to zero at the opposite contact. Increasing the bias voltage beyond the needed bias to completely deplete the detector adds a uniform field. By neglecting the built-in voltage (as the bias voltage is much higher than that), the electric field is written as,
+The electric field drops linearly from its maximum value at the
+junction to zero at the opposite contact. Increasing the bias voltage
+beyond the needed bias to completely deplete the detector adds a
+uniform field. By neglecting the built-in voltage (as the bias voltage
+is much higher), the electric field is written as,
 \begin{equation}
 E(z)={{V_B-V_D} \over d}+\left(1-{z \over d}\right)2{V_D \over d}
-\; ,
-\label{eq:Efield}
+\; .
+\label{eq:Efield_drift}
 \end{equation}
 
-The charge carriers, drift through the silicon detector with a velocity as defined by,
+The charge carriers, drift through the silicon detector with a
+velocity as defined by,
 
 \begin{equation}
-  \vec{v}_{drift}=\mu_c \cdot \vec{E}\; ,
+  \vec{v}_{drift}=\mu_c \cdot \vec{E}\; .
 \end{equation}
 
 In one-dimension, and considering $\mu_c$ constant, the drift velocity is written as
 \begin{equation}
 v_{drift}={{dz} \over {dt}}=\mu_c \cdot E(z)
-\; ,
+\; .
 \end{equation}
 
 The time required for a charge originating at point $z_0$ to reach a point $z$ is
 \begin{equation} 
   t(z)=\int_{z_0}^{z} {{ds} \over {\mu_c \cdot E(s)}}
-  \; ,
+  \; .
   \label{eq:driftTimeIntegral}
 \end{equation}
 
-By integrating \cref{eq:driftTimeIntegral} and replacing the electric field by \cref{eq:Efield} one obtains:
+By integrating \cref{eq:driftTimeIntegral} and replacing the electric
+field by \cref{eq:Efield} one obtains:
 
 \begin{equation} 
   t(z, z_0)={{d^2} \over {2 \mu_c V_D}} ln\left( {{d(V_B+V_D)-2V_Dz_0} \over {d(V_B+V_D)-2V_Dz}} \right)
-  \; ,
+  \; .
   \label{eq:driftTimeIntegratedz0}
 \end{equation}
 
 In \cref{eq:driftTimeIntegratedz0}, by replacing $z_0=0$, we obtain:
 \begin{equation} 
   t(z)={{d^2} \over {2 \mu_c V_D}} ln\left( {{V_B+V_D} \over {V_B+V_D-2V_Dz/d}} \right)
-  \; ,
+  \; .
   \label{eq:driftTimeIntegrated}
 \end{equation}
 
-And the diffusion standard deviation is given by,
+The diffusion standard deviation is given by:
 
 \begin{equation} 
   \sigma_{diffusion}\left(z\right)=\sqrt{2 D_{b} t_{c}}=\sqrt{{{kTd^2}\over{eV_D}}ln\left({{V_B+V_D}\over{V_B+V_D-2V_Dz/d}}\right)}
-  \; ,
+  \; .
   \label{eq:sigmaDiffusion}
 \end{equation}
 
@@ -660,7 +758,7 @@ drift time for n and p-type carriers in a $50\,\micron$ thick silicon
 sensor with a depletion voltage of |V\textsubscript{D}|=4~V and biased
 at |V\textsubscript{B}|=15~V as a function of the depth. The electrons
 have a higher drift time and therefore are faster for readout. But
-diffusion does not depend on the carrier.
+diffusion does not depend on the carrier type.
 
 \cref{fig:Efield_n_vs_p} shows the electric field and the mobility
 distribution as a function of the depth in silicon.
@@ -702,8 +800,21 @@ distribution as a function of the depth in silicon.
 
 %%\newpage
 \section{Pixelated silicon sensors properties}
-\subsection{Silicon sensors types}
-\subsection{Leakage current}
+
+Previously, we have reviewed the properties of a pn-junction as it is
+the building block of pixel detectors. By segmenting the electrodes on
+a pn-junction a pixel detector is obtained. The highly doped
+electrodes, which can be n or p-type, are introduced through a mask to
+form a pixel matrix with ion implantation. Each pixel forms an
+independent pn-junction and the gaps between the pixels are
+electrically controlled to isolate a pixel from its neighbouring
+diodes. With an aluminum layer deposited on the electrodes provides
+the external bias voltage and signal path to the readout electronics
+with a low resistance.
+
+
+%\subsection{Silicon sensors types}
+%\subsection{Leakage current}
 \subsection{Charge collection and Ramo's theorem: induced charge}\label{sec:RamoTheorem}
 When a charge moves in the sensitive volume of a detector, a current
 $i_s(t)$ flows instantaneously. \\ 
