[Silicon] intermediate commit

--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -821,7 +821,7 @@ $i_s(t)$ flows instantaneously. \\
 First, consider the simple example of a charge $q$ near an infinitely
 large electrode with all the electric field lines terminating on the
 electrode. The Gauss's law, for a surface $S$ surrounding the charge
-is expressed as
+is expressed as:
 
 \begin{equation}
 \oint_{s} \vec{E} \cdot d\vec{a}=q\; .
